--- a/components/ProductCard.module.css
+++ b/components/ProductCard.module.css
@@ -91,6 +91,7 @@
     text-decoration: none;
     color: inherit;
     display: block;
+    height: 100%;
 }
 
 /* CAROUSEL CONTROLS */
